[package]
name = "stm32f7xx-hal"
version = "0.0.1"
authors = ["Ramon Imbao <ramonimbao@gmail.com>"]
edition = "2018"
description = "Hardware abstraction layer for the STM32F7xx chips"
keywords = ["no-std", "stm32f7xx", "stm32f7", "embedded", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT or Apache-2.0"
exclude = [".gitignore"]

[dependencies]
cortex-m = "0.5.8"
nb = "0.1.1"
stm32f7 = "0.6.0"
as-slice = "0.1.0"

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
version = "1.1.1"
default-features = false

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]


[package.metadata.docs.rs]
features = ["stm32f7x6", "rt"]

[features]
rt = ["stm32f7/rt"]
stm32f7x2 = ["stm32f7/stm32f7x2"]
stm32f7x3 = ["stm32f7/stm32f7x3"]
stm32f7x5 = ["stm32f7/stm32f7x5"]
stm32f7x6 = ["stm32f7/stm32f7x6"]
stm32f7x7 = ["stm32f7/stm32f7x7"]
stm32f7x9 = ["stm32f7/stm32f7x9"]
unproven = ["embedded-hal/unproven"]

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = "0.3.1"
cortex-m-rt = "0.6.6"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true